examples/negative/type_invariants/let_annotation_mismatch.kai
# Negative fixture (#520 / type system): a `let` binding's
# explicit type annotation contradicts the RHS expression's
# type. Typer must reject with a let-annotation mismatch.

fn main() : Int {
  let x: String = 42
  0
}
